2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, console/console.c: Add BFIN_ON_SKYEYE define to disable
	features not supported on simulator.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, console/console.c: Add skyeye alias for bf537stamp.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/linkcmds: Use top level shared
	bsp_get_work_area() implementation.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Remove unnecessary includes of
	rtems/libcsupport.h and rtems/libio.h.
	* startup/linkcmds: Remove unused _HeapBase.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds:
	Split out bsp_get_work_area() into its own file and user BSP
	Framework to perform more initialization.

2008-08-15	Allan Hessenflow <allanh@kallisti.com>

	* ChangeLog, Makefile.am, README, bsp_specs, configure.ac,
	preinstall.am, console/console.c, include/bsp.h,
	network/networkconfig.c, start/start.S, startup/bspstart.c,
	startup/linkcmds: New files.
