@@ -30,10 +30,6 @@ extern "C" {
 #include <libcpu/bf537.h>
 #include <libcpu/memoryRegs.h>
 
-
-/* #define CLOCK_DRIVER_USE_FAST_IDLE */
-
-
 /* configure data cache to use 16K of each SRAM bank when enabled */
 #define BSP_DATA_CACHE_CONFIG  (3 << DMEM_CONTROL_DMC_SHIFT)
 
